tests/compile_fail/clone.stderr
error[E0505]: cannot move out of `selfie` because it is borrowed
  --> tests/compile_fail/clone.rs:21:10
   |
20 |     let cloned = selfie.with_referential(|r| r.clone());
   |                  -------------------------------------- borrow of `selfie` occurs here
21 |     drop(selfie); // Drops both data and selfie
   |          ^^^^^^ move out of `selfie` occurs here
22 |     println!("{}", cloned.inner); // Boom
   |                    ------------ borrow later used here
